# p6a-cmd

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  build.sh  install.sh  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
assets/installer/: README.linux.txt  README.macos.txt  README.windows.txt  WELCOME.linux.txt  WELCOME.macos.txt  WELCOME.windows.txt
cpack/: CPack.distribution.dist.in  pkgbuild_wrapper.sh
src/: .clangd  CMakeLists.txt  api.c  api.h  arg.c  arg.h  base64.c  base64.h  config.c  config.h  create.c  create.h  download.c  download.h  fs.c  fs.h  hash.c  hash.h  ini.c  ini.h  link.c  link.h  list.c  list.h  logger.c  logger.h  main.c  media.c  media.h  oauth.c  oauth.h  qr.c  qr.h  rng.c  rng.h  sync.c  sync.h  throttle.c  throttle.h  types.h  (+4 more)
tests/: .clangd  CMakeLists.txt  test_arg.c  test_base64.c  test_config.c  test_hash.c  test_ini.c  test_runner.h  test_throttle.c  test_wdir.c
